# NLP-Project

./: .gitignore
smart_email_assistant/: README.md  __init__.py  pyproject.toml  requirements.txt
smart_email_assistant/.cache/: email_classifier.joblib  tfidf_vectorizer.joblib
smart_email_assistant/api/: index.py
smart_email_assistant/smart_email_assistant/: __init__.py  config.py
smart_email_assistant/smart_email_assistant/core/: __init__.py  processor.py
smart_email_assistant/smart_email_assistant/data/: sample_emails.json
smart_email_assistant/smart_email_assistant/pipelines/: __init__.py  actions.py  analytics.py  classification.py  features.py  ner_wsd.py  preprocess.py  sentiment.py  summarization.py
smart_email_assistant/smart_email_assistant/utils/: __init__.py  cache.py  logger.py
smart_email_assistant/smart_email_assistant/web/: __init__.py  server.py
smart_email_assistant/smart_email_assistant/web/static/css/: style.css
smart_email_assistant/smart_email_assistant/web/templates/: base.html  email_detail.html  index.html
smart_email_assistant/tests/: test_processor.py
