[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-email-assistant"
version = "0.1.0"
description = "Smart NLP-powered email processing system"
readme = "README.md"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
  "flask>=2.3.0,<3.0",
  "transformers>=4.33.0,<5.0",
  "scikit-learn>=1.3.0,<2.0",
  "spacy>=3.6.0,<4.0",
  "nltk>=3.8.0,<4.0",
  "joblib>=1.3.0,<2.0",
  "numpy>=1.24.0,<2.0",
  "pandas>=2.1.0,<3.0",
  "torch>=2.0.0,<3.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
  "pytest>=7.4,<9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
